--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Opa-JI-Qwx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Opa-JI-Qwx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -32,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-Tr-ppv" userLabel="TurnosView">
-                                <rect key="frame" x="20" y="108" width="374" height="70"/>
+                                <rect key="frame" x="20" y="112" width="374" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TURNOS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woD-OK-cUV">
                                         <rect key="frame" x="134.5" y="12" width="105" height="25"/>
@@ -88,26 +89,22 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgN-Lf-PWV" userLabel="InstrucoesView">
-                                <rect key="frame" x="20" y="198" width="374" height="555"/>
+                                <rect key="frame" x="20" y="202" width="374" height="551"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adulto" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6u-Eg-cEd">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adulto" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="f6u-Eg-cEd">
                                         <rect key="frame" x="15" y="15" width="84.5" height="45"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Em uma vasilha, junte os secos: polvinho doce e o parmesão" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czN-bv-CPP">
-                                        <rect key="frame" x="27" y="415" width="320" height="42"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="IgO-3q-r3d"/>
-                                            <constraint firstAttribute="width" constant="320" id="Uou-jy-mo4"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Em uma vasilha, junte os secos: polvinho doce e o parmesão" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="czN-bv-CPP">
+                                        <rect key="frame" x="27" y="409" width="320" height="44"/>
                                         <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dos dois tipos de polvilho, o doce é mais recomendável dependendo do manuseio." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0aP-jH-D7M">
-                                        <rect key="frame" x="79" y="477" width="268" height="58"/>
+                                        <rect key="frame" x="79" y="473" width="268" height="58"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="268" id="S42-Dl-fJ0"/>
                                             <constraint firstAttribute="height" constant="58" id="pyt-Gy-91y"/>
@@ -142,8 +139,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siga a seguinte instrução:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-Vs-nYI">
-                                        <rect key="frame" x="15" y="70" width="189" height="27.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siga a seguinte instrução:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-Vs-nYI">
+                                        <rect key="frame" x="15" y="70" width="262" height="27.5"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -155,7 +152,7 @@
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </arscnView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dica - Blue" translatesAutoresizingMaskIntoConstraints="NO" id="bHA-oc-nL9">
-                                        <rect key="frame" x="27" y="490" width="32" height="32"/>
+                                        <rect key="frame" x="27" y="486" width="32" height="32"/>
                                         <color key="tintColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="32" id="BRw-5z-NCY"/>
@@ -163,11 +160,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhd-gs-qhb">
-                                        <rect key="frame" x="27" y="481" width="320" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="HhA-iD-nlp"/>
-                                            <constraint firstAttribute="height" constant="50" id="RzJ-Eo-tRz"/>
-                                        </constraints>
+                                        <rect key="frame" x="27" y="477" width="320" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="É hora de comer!">
                                             <fontDescription key="titleFontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="17"/>
@@ -184,7 +177,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="secos.1" translatesAutoresizingMaskIntoConstraints="NO" id="sWO-ff-cJH">
-                                        <rect key="frame" x="93.5" y="139" width="187" height="277.5"/>
+                                        <rect key="frame" x="93.5" y="179" width="187" height="193"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNc-zg-T6I">
                                         <rect key="frame" x="21" y="121" width="65" height="243"/>
@@ -208,21 +201,29 @@
                                 <color key="backgroundColor" name="LabelBlue"/>
                                 <constraints>
                                     <constraint firstItem="qhd-gs-qhb" firstAttribute="centerX" secondItem="YgN-Lf-PWV" secondAttribute="centerX" id="40A-6b-W4B"/>
+                                    <constraint firstItem="6V8-Vs-nYI" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.0499093" id="DCN-zo-hHS"/>
                                     <constraint firstItem="0aP-jH-D7M" firstAttribute="top" secondItem="czN-bv-CPP" secondAttribute="bottom" constant="20" id="Etx-es-RDR"/>
-                                    <constraint firstItem="sWO-ff-cJH" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.5" id="IYX-la-HeE"/>
+                                    <constraint firstItem="sWO-ff-cJH" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.35" id="IYX-la-HeE"/>
+                                    <constraint firstItem="czN-bv-CPP" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.08" id="OG8-qT-OIx"/>
                                     <constraint firstItem="f6u-Eg-cEd" firstAttribute="top" secondItem="YgN-Lf-PWV" secondAttribute="top" constant="15" id="Rsb-Uq-krk"/>
                                     <constraint firstAttribute="trailing" secondItem="czN-bv-CPP" secondAttribute="trailing" constant="27" id="UsB-9H-cLe"/>
+                                    <constraint firstItem="czN-bv-CPP" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.855615" id="VsC-bY-Rpg"/>
                                     <constraint firstItem="bHA-oc-nL9" firstAttribute="leading" secondItem="YgN-Lf-PWV" secondAttribute="leading" constant="27" id="WFt-Tn-QOZ"/>
                                     <constraint firstItem="sWO-ff-cJH" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.5" id="ZCH-N0-Lk4"/>
                                     <constraint firstItem="sWO-ff-cJH" firstAttribute="centerX" secondItem="YgN-Lf-PWV" secondAttribute="centerX" id="aCw-D5-yDq"/>
+                                    <constraint firstItem="f6u-Eg-cEd" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.0816697" id="aDE-U7-EYJ"/>
+                                    <constraint firstItem="6V8-Vs-nYI" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.7" id="dv7-TT-PKH"/>
                                     <constraint firstAttribute="trailing" secondItem="0aP-jH-D7M" secondAttribute="trailing" constant="27" id="e5b-Uz-xTB"/>
                                     <constraint firstItem="8TL-DF-4ma" firstAttribute="centerY" secondItem="f6u-Eg-cEd" secondAttribute="centerY" id="eyg-7X-gSf"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="499" id="fI0-Ob-lXp"/>
                                     <constraint firstItem="6V8-Vs-nYI" firstAttribute="top" secondItem="f6u-Eg-cEd" secondAttribute="bottom" constant="10" id="g1M-gU-bKe"/>
+                                    <constraint firstItem="f6u-Eg-cEd" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.225936" id="g24-Ci-MTK"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="hAj-TK-GoX"/>
                                     <constraint firstItem="0aP-jH-D7M" firstAttribute="leading" secondItem="bHA-oc-nL9" secondAttribute="trailing" constant="20" id="hTH-Lz-7bg"/>
+                                    <constraint firstItem="qhd-gs-qhb" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.855615" id="hUn-lW-Uzl"/>
                                     <constraint firstItem="sWO-ff-cJH" firstAttribute="centerY" secondItem="YgN-Lf-PWV" secondAttribute="centerY" id="hV6-4s-60e"/>
                                     <constraint firstItem="bHA-oc-nL9" firstAttribute="centerY" secondItem="0aP-jH-D7M" secondAttribute="centerY" id="kqN-fg-32v"/>
+                                    <constraint firstItem="qhd-gs-qhb" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.0907441" id="l7F-wQ-a7D"/>
                                     <constraint firstItem="6V8-Vs-nYI" firstAttribute="leading" secondItem="YgN-Lf-PWV" secondAttribute="leading" constant="15" id="lLc-oT-3Oq"/>
                                     <constraint firstItem="f6u-Eg-cEd" firstAttribute="leading" secondItem="YgN-Lf-PWV" secondAttribute="leading" constant="15" id="p9s-Il-0un"/>
                                     <constraint firstAttribute="bottom" secondItem="0aP-jH-D7M" secondAttribute="bottom" constant="20" id="rtW-gd-Dwu"/>
@@ -321,7 +322,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Opa-JI-Qwx" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="zDR-Hz-bHZ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
